syntax = "proto3";

package pb;
import "common.proto";

service Branch {
  rpc CreateBranch(CreateBranchRequest) returns (BranchResponse);
  rpc GetBranch(GetBranchRequest) returns (BranchResponse);
  rpc DeleteBranch(DeleteBranchRequest) returns (PlainResponse);
  rpc GetBranchEncToken(GetBranchEncTokenRequest) returns (StringResponse);
}

message BranchResponse {
  string BranchId = 1;
  string BranchName = 2;
  string BranchEncToken = 3;
  int64 CreateTime = 4;
}

message CreateBranchRequest {
  bytes BranchName = 1;
}

message GetBranchRequest {
  bytes BranchId = 1;
}

message DeleteBranchRequest {
  bytes BranchId = 1;
}

message GetBranchEncTokenRequest {
  bytes branchId = 1;
}